2002-07-08  Laavanya K R <laavanya.gopalan@wipro.com>

	* actions.c: Modified exec_action_in_db() to execute "action"
	by a combination of fork() and execlp() calls instead of
	executing through system().  There is a potential of Time of
	Check and Time of Use (TOCTOU) issues with system() since
	shell is spawned first and command's executed after a small
	time gap. Fixes #87110.

2002-07-08  Deepa Natarajan  <deepa.natarajan@wipro.com> 
 
	* logview.[ch], log_repaint.c: Append filename to the window 
	title. Disable Close and Properties option when all files are
	closed. s/Log/File as logs are just files. 

2002-07-05  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log.desktop.in: s/DocPath/X-GNOME-DocPath.
	Now conforms to spec.

2002-07-05  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Add install of schema
	* logview.schemas.in: Add schemas.
	* logview.c, logview.h, userprefsdialog.c: Get rid of old
	unused cruft that you could set to change the size of your 
	windows.

2002-07-02  Deepa Natarajan  <deepa.natarajan@wipro.com> 
 
	* logrtns.[ch], monitor.c: Rewrote ReadPageDown() and 
	mon_read_new_lines() to update the logs that are monitored.
     
2002-07-02  Deepa Natarajan  <deepa.natarajan@wipro.com> 

	* logview.c: enable restore session.

2002-06-28  Deepa Natarajan  <deepa.natarajan@wipro.com> 

	logview.h: Remove Fonts, Colors & Style info from ConfigData
	structure. Remove log_page structure. Change Log structure
	to remove Page stuff and add LogLine. Add an array to 
	maintain the tree view paths that are expanded in a file. 
	Used when switching between logs.

	logview.c: Display logs in the form of a tree view placed 
	inside a scrolled window. Set up 2 call backs: row-activated 
	for showing zoom window and selection changed to update the 
	current log line. Removed all canvas and scroll window stuff.

	log_repaint.c: Rewrote to use GtkTreeView. Clean up #defines.
	Add save_row_to_expand(): to save paths that are currently 