@@ -1,3 +1,8 @@
+2002-07-17  Deepa Natarajan  <deepa.natarajan@wipro.com>
+
+	* logview.c: Add menu item Close All - to close all the log
+	files in one shot.
+
 2002-07-08  Laavanya K R <laavanya.gopalan@wipro.com>
 
 	* actions.c: Modified exec_action_in_db() to execute "action"
